--- a/src/components/style/style.css
+++ b/src/components/style/style.css
@@ -54,7 +54,28 @@ background-image: linear-gradient(45deg, #ee9ca7 0%, #ffdde1 100%); border-radiu
 -moz-box-shadow: 0px 10px 52px -13px rgba(0,0,0,0.75);
 box-shadow: 0px 10px 52px -13px rgba(0,0,0,0.75);
 }
+.grad-select{
+      background-image: linear-gradient(-20deg, #fc6076 0%, #ff9a44 100%);
+  width: 100%;
+  border-radius: 25px;
+  padding-left:20px;
+  padding-right: 20px;
+  font-size: 1.2em;
+  text-decoration: none;
+  color: white;
+  transition: 1s;
+  -webkit-box-shadow: 0px 10px 52px -13px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 10px 52px -13px rgba(0,0,0,0.75);
+box-shadow: 0px 10px 52px -13px rgba(0,0,0,0.75);
 
+}
+
+.grad-select option{
+  color: #1c1c1c;
+  background-color:white;
+  border:none;
+  outline: none;
+}
 .bg-grad-blue{
 background-image: linear-gradient(-225deg, #9EFBD3 0%, #57E9F2 48%, #45D4FB 100%);  border-radius: 10px;
 
