--- a/src/components/style/form.css
+++ b/src/components/style/form.css
@@ -1,5 +1,6 @@
 .custom-form{
   padding: 30px;
+  margin-top: 10vh;
 }
 ::-webkit-input-placeholder {
   color: rgba(255, 255, 255, 0.65);
@@ -11,8 +12,39 @@
 ::-webkit-input-placeholder .input-line:focus +::input-placeholder {
   color: #fff;
 }
+.inputfile {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
 
+.inputfile + label {
+    
+  background-image: linear-gradient(-225deg, #9EFBD3 0%, #57E9F2 48%, #45D4FB 100%);  border-radius: 10px;
+  border-radius: 25px;
+  padding-left:20px;
+  padding-right: 20px;
+  font-size: 1.5em;
+  text-decoration: none;
+  color: white;
+  transition: 1s;
+  -webkit-box-shadow: 0px 10px 52px -13px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 10px 52px -13px rgba(0,0,0,0.75);
+  box-shadow: 0px 10px 52px -13px rgba(0,0,0,0.75);
+}
+
+.inputfile:focus + label,
+.inputfile + label:hover {
+
+  -webkit-box-shadow: 0px 10px 52px -13px rgba(0,0,0,0);
+  -moz-box-shadow: 0px 10px 52px -13px rgba(0,0,0,0);
+  box-shadow: 0px 10px 52px -13px rgba(0,0,0,0);
+}
 .input-line {
+  margin:1vh;
   font-size: 18px;
   padding: 10px 10px 10px 5px;
   -webkit-appearance: none;
@@ -22,6 +54,7 @@
   border: none;
   border-radius: 0;
   outline: none;
+  box-shadow: none;
   border-bottom: 1px solid #757575;
 }
 .input-line:focus{
