--- a/src/components/style/Home.css
+++ b/src/components/style/Home.css
@@ -21,11 +21,11 @@
 }
 
 .hero-area {
-  height: 120vh;
+  height: 98vh;
   display: flex;
   justify-content: center;
   align-items: center; 
-  background-image:url('/assets/bg.png');
+  background-image:url('/assets/s8.jpg');
     background-repeat: no-repeat;
 
   background-size: 100% auto;
@@ -33,10 +33,8 @@
   .hero-area .btn-main {
     margin-top: 30px; }
 
-.hero-title{
-  font-size:65px;
-  color: white;
-  margin-left: 30vh;
+h3 {
+  margin-bottom: 1em;
 }
 .grad-text {
   width: 100%;
@@ -62,9 +60,9 @@ section.about {
   height: 100vh;
   position: relative;
   padding: 150px 0;
-  background-image: url('/assets/about-bg.png');
+  background-image: url('/assets/about.png');
   background-repeat: no-repeat;
-  background-size: 100% ;
+  background-size: 100% 100vh;
 }
 
 section.about h2 {
@@ -182,31 +180,7 @@ background-color: white;
 	border-radius: 10px;
 	padding: 50px;
 	color:white !important;
-	-webkit-box-shadow: 0px 0px 34px -7px rgba(0,0,0,0.5);
--moz-box-shadow: 0px 0px 34px -7px rgba(0,0,0,0.5);
-box-shadow: 0px 0px 34px -7px rgba(0,0,0,0.5);
-}
-.jumbotron-bg h2 p {
-  color: white !important;
-}
-.jumbotron-bg{
-  border-radius:280px !important;
-}
-.s-head{
-  margin-top:2vh;
-}
-.s-modal-head{
-  margin-left: 2vw;
-  margin-right: 2vw;
-  position: absolute;
-  margin-top: -5vh;
-  border-radius: 10px;
-  color:white !important;
-  -webkit-box-shadow: 0px 0px 34px -7px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 0px 34px -7px rgba(0,0,0,0.75);
-  box-shadow: 0px 0px 34px -7px rgba(0,0,0,0.75);
-}
-.reg-form{
-  position: absolute;
-  margin-top: 10vh;
+	-webkit-box-shadow: 0px 0px 34px -7px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 34px -7px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 34px -7px rgba(0,0,0,0.75);
 }
