--- a/coming soon page/style.css
+++ b/coming soon page/style.css
@@ -22,6 +22,7 @@ body, html {
          radial-gradient(ellipse at center, rgba(0,0,255,0.3) 0%, rgba(0,0,0,0) 70%), /* niebieski */
         radial-gradient(ellipse at center, rgba(255,0,0,0.3) 0%, rgba(0,0,0,0) 70%), /*czerwony */
         radial-gradient(ellipse at center, rgba(0,255,0,0.3) 0%, rgba(0,0,0,0) 70%) /*zielony */
+		#c3d7db;
     background-repeat: 
         no-repeat, 
         no-repeat, 
