Slack link added
Github icon added
and Cards fixed in About us

--- a/src/components/style/Home.css
+++ b/src/components/style/Home.css
@@ -355,3 +355,6 @@ section.about .badge-link img {
   -moz-box-shadow: 0px 0px 34px -7px rgba(0,0,0,0.75);
   box-shadow: 0px 0px 34px -7px rgba(0,0,0,0.75);
 }
+.git-logo{
+  font-size:30px !important;
+}
