--- a/src/components/style/Footer.css
+++ b/src/components/style/Footer.css
@@ -11,7 +11,7 @@ section .section-title {
 }
 #footer {
     height: 100vh;
-    background-image: url("/assets/footer-bg.png");
+    background-image: url("/assets/footer-bg.svg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
