--- a/src/components/style/style.css
+++ b/src/components/style/style.css
@@ -1463,3 +1463,7 @@ box-shadow: 0px 10px 52px -13px rgba(0,0,0,0);
     margin-left: auto !important;
   }
 }
+
+.login-panel-heading{
+  color:white !important;
+}
