calendar months fix

--- a/src/components/style/CustomNavbar.css
+++ b/src/components/style/CustomNavbar.css
@@ -33,7 +33,7 @@ nav.navbar, .navbar-default {
 
 .navbar-brand>img{
   display: block;
-  height: -webkit-fill-available;
+  height: 100%;
 }
 
 .navbar-default .navbar-toggle{
