--- a/src/components/style/form.css
+++ b/src/components/style/form.css
@@ -8,8 +8,6 @@ input{
 input::-webkit-input-placeholder {
   color: rgba(255, 255, 255, 1);
   font-size: 2vh;
-  padding-top: 2vh;
-  padding-bottom: 2vh;
 }
 ::placeholder {
   color: rgb(255, 255, 255);
@@ -28,15 +26,12 @@ input[type=text] {
     box-shadow:inset none; 
 }
 
-input[type=text]:focus {
-}
-
 .input-line {
   box-shadow:inset none !important;
   background-color: transparent;
   margin-top: 30px;
   margin-bottom: 20px;
-  font-size: 25px;
+  /*font-size: 25px;*/
   padding: 10px 10px 10px 5px;
   -webkit-appearance: none;
   display: block;
@@ -120,10 +115,6 @@ background-image: linear-gradient(-225deg, #9EFBD3 0%, #57E9F2 48%, #45D4FB 100%
   position: absolute;
   width: 100%;
 }
-/* .calendarStyle{
-  width: 70%;
-  height: 60%;
-} */
 
 .modal-dialog{
   border-radius: 1em;
