--- a/src/components/style/style.css
+++ b/src/components/style/style.css
@@ -1,4 +1,16 @@
 /*Custom css*/
+*{
+  border: red 1px solid;
+}
+div{
+  border: green 1px solid;
+}
+p{
+  border: #ff9a44 1px solid;
+}
+h1,h2,h3,h4,h5,h6{
+  border: rgb(0, 0, 0) 1px solid;
+}
 .btn-grad-peach{
   background-image: linear-gradient(-20deg, #fc6076 0%, #ff9a44 100%);
   border-radius: 25px;
@@ -1473,4 +1485,7 @@ box-shadow: 0px 10px 52px -13px rgba(0,0,0,0);
   width: 100vw;
   height: 100vh;
   opacity: 0.5;
+}
+.no-padd{
+  padding: 0 !important;
 }
