Revert "Profile Page Proofreading"

--- a/src/components/user/profileComponents/styles/header.css
+++ b/src/components/user/profileComponents/styles/header.css
@@ -31,7 +31,7 @@ body{
         "avatar user-name"
         "profile-buttons profile-buttons"
         "cluster-name cluster-name"
-        "archipelago archipelago"
+        "archiplago archiplago"
         ;
         background-color: rgb(60, 84, 121);
         color:white;
@@ -68,7 +68,7 @@ body{
     padding: 10px;
     
 }
-.profile-bar .archipelago  h3{
+.profile-bar .archiplago  h3{
     padding: 10px;
     
 }
@@ -76,16 +76,16 @@ body{
 .profile-bar .user-name{
     grid-area: user-name;
 }
-.profile-bar .archipelago{
-    grid-area: archipelago;
+.profile-bar .archiplago{
+    grid-area: archiplago;
     color:white;
     padding: 10px;
 }
-.profile-bar .archipelago li img{
+.profile-bar .archiplago li img{
     width: 10%;
     border-radius: 50%;
 }
-.profile-bar .archipelago  li{
+.profile-bar .archiplago  li{
     list-style-type: none;
     
 }
