--- a/src/components/style/style.css
+++ b/src/components/style/style.css
@@ -1,4 +1,4 @@
-/*Custom css*/
+/*Custom CSS baby*/
 *{
   border: red 1px solid;
 }
@@ -163,6 +163,7 @@ box-shadow: 0px 10px 52px -13px rgba(0,0,0,0);
 
 
 /*DON'T GO BELOW ITS DARK DOWN THERE*/
+/*SORRY JANETTE, I MUST. THIS IS...GOODBYE. --Ilyas*/
 
 .m-0 {
   margin: 0 !important;
