--- a/src/components/user/profileComponents/styles/header.css
+++ b/src/components/user/profileComponents/styles/header.css
@@ -5,23 +5,21 @@ body {
   left: 0; }
 
 .profile-btn-grad {
-  background-image: linear-gradient(-20deg, #fc6076 0%, #ff9a44 100%);
   border-radius: 25px;
   margin: 5px;
-  padding: 10px;
   font-size: 1.5em;
   text-decoration: none;
   color: white;
   transition: 1s;
-  -webkit-box-shadow: 0px 10px 52px -13px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 10px 52px -13px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 10px 52px -13px rgba(0, 0, 0, 0.75); }
-
-.profile-btn-grad i {
-  font-size: 1.5em; }
+  padding: 8px;
+  padding-left: 7px; }
+  .profile-btn-grad .lnr {
+    font-size: 30px;
+    color: #1c1c1c;
+    display: inline; }
 
 .profile-bar {
-  width: 30rem;
+  width: 35rem;
   padding: 10px;
   padding-top: 70px;
   height: 100vh;
@@ -29,7 +27,10 @@ body {
   grid-gap: 10px;
   grid-template-columns: 50% 50%;
   grid-auto-rows: min-content min-content min-content min-content;
-  grid-template-areas: "avatar user-name" "profile-buttons profile-buttons" "cluster-name cluster-name" "archipelago archipelago";
+  grid-template-areas: "avatar user-name"
+ "profile-buttons profile-buttons"
+ "cluster-name cluster-name"
+ "archipelago archipelago";
   background-color: #f6feef;
   color: white;
   /* background-image: linear-gradient(-225deg, #9EFBD3 0%, #57E9F2 48%, #45D4FB 100%);  border-radius: 10px; */
