--- a/src/components/user/profileComponents/styles/header.scss
+++ b/src/components/user/profileComponents/styles/header.scss
@@ -7,24 +7,23 @@ body{
     left: 0;
 }
 .profile-btn-grad{
-    background-image: linear-gradient(-20deg, #fc6076 0%, #ff9a44 100%);
     border-radius: 25px;
     margin:5px;
-    padding: 10px;
     font-size: 1.5em;
     text-decoration: none;
     color: white;
     transition: 1s;
-    -webkit-box-shadow: 0px 10px 52px -13px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 10px 52px -13px rgba(0,0,0,0.75);
-    box-shadow: 0px 10px 52px -13px rgba(0,0,0,0.75);
-}
-.profile-btn-grad i{
-    font-size: 1.5em;
-
+    padding: 15px;
+    padding-left: 7px;
+     
+    .lnr{
+        font-size: 30px;
+        color: #1c1c1c;
+        display: inline;
+    }
 }
 .profile-bar{
-    width: 30rem;
+    width: 35rem;
     padding:10px;
     padding-top:70px; 
     height: 100vh;
