--- a/src/components/user/profileComponents/styles/profile.css
+++ b/src/components/user/profileComponents/styles/profile.css
@@ -1,3 +1,16 @@
 .no-padd{
     padding: 0 !important;
 }
+
+.scrollable{
+    position: absolute;
+    height: 500px;
+    width: 100%;
+    overflow-y: auto;
+}
+
+.input{
+    position: fixed;
+    bottom: 0px;
+    width: 65%;
+}
