Added cluster member's list to sidebar

--- a/src/components/user/profileComponents/styles/header.css
+++ b/src/components/user/profileComponents/styles/header.css
@@ -28,7 +28,7 @@ body {
   grid-auto-rows: min-content min-content min-content min-content;
   grid-template-areas: "avatar user-name" "profile-buttons profile-buttons" "cluster-name cluster-name" "archipelago archipelago";
   background-color: #f6feef;
-  color: white;
+  color: black;
   /* background-image: linear-gradient(-225deg, #9EFBD3 0%, #57E9F2 48%, #45D4FB 100%);  border-radius: 10px; */
   -webkit-box-shadow: -2px 0px 17px -2px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -2px 0px 17px -2px rgba(0, 0, 0, 0.75);
@@ -45,7 +45,7 @@ body {
     grid-area: profile-buttons; }
   .profile-bar .cluster-name {
     grid-area: cluster-name;
-    color: white;
+    color: black;
     padding: 10px; }
   .profile-bar .cluster-name h3 {
     background-color: #e6e6e6;
@@ -62,7 +62,7 @@ body {
     grid-area: user-name; }
   .profile-bar .archipelago {
     grid-area: archipelago;
-    color: white;
+    color: black;
     padding: 10px; }
   .profile-bar .archipelago li img {
     width: 10%;
