--- a/src/components/style/News.css
+++ b/src/components/style/News.css
@@ -2,3 +2,20 @@
   width: 100%;
   margin-bottom: 2em;
 }
+
+.news-page {
+  font-family: Georgia;
+  padding-top: 25px;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.hidden-xs {
+text-align: center;
+font-weight: bold;
+font-size: small;
+}
+
+.main-section {
+  background: linear-gradient( rgb(205, 253, 255), rgb(255, 255, 255));
+}
