--- a/src/components/style/About.css
+++ b/src/components/style/About.css
@@ -8,3 +8,29 @@
   float: left;
   margin: 0 1em 1em 0;
 }
+
+.container {
+  margin: auto;
+  width: 50%;
+}
+
+.text-center {
+  padding-bottom: 20px;
+}
+
+h4 {
+  text-align: center;
+}
+
+.s-cards {
+  text-align: center;
+}
+
+#divisions {
+  background-image: linear-gradient(white, pink);
+}
+
+#technology {
+  background-image: linear-gradient(white, lightblue);
+}
+
